# codex-v1

./: README.md  install.sh  pyproject.toml
codex/: __main__.py  crypto.py  editor.py  indexer.py  storage.py
