[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-journal"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=41.0.0",
    "rich>=13.0.0",
]

[project.scripts]
codex = "codex.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codex*"]
